--- a/src/PrimeroTaskMS/opgaver/templates/opgaver/opgaver_detail.html
+++ b/src/PrimeroTaskMS/opgaver/templates/opgaver/opgaver_detail.html
@@ -25,15 +25,19 @@
 
     <p class="col-2 border rounded p-2 my-0 text-center" >{{ object.kunde_navn }}</p>
     <div class="col-1 border rounded p-0 my-0 text-center " >
+
+       <!--  {{ object.ansvarlig }}  TESTER at den henter rigtigt-->
+
         {%   if object.ansvarlig == "5" %} <p class=" text-primary p-2 my-0 ">SO</p>
         {% elif object.ansvarlig == "2" %} <p class=" text-primary p-2 my-0 ">LM</p>
         {% elif object.ansvarlig == "4" %} <p class=" text-primary p-2 my-0 ">AB</p>
         {% elif object.ansvarlig == "3" %} <p class=" text-primary p-2 my-0 ">MB</p>
-        {% else %} <p class=" text-success p-2 my-0 " >ALLE</p>
+        {% else %} <p class=" text-success p-2 my-0 " >Alle</p>
         {% endif %}
+
     </div>
-    <button class="col-2 border p-2 my-0  btn btn-outline-dark" href="#" data-toggle="popover" data-trigger="hover" data-content="{% if object.opgave_beskrivelse %}{{ object.opgave_beskrivelse }}{% else %}Beskrivelse mangler{% endif %}" >{% if object.opgave_beskrivelse %}{{ object.opgave_beskrivelse|truncatechars:"20"}}{% else %}Beskrivelse mangler{% endif %}</button>
-    <button class="col-2 border p-2 my-0  btn btn-outline-dark" href="#" data-toggle="popover" data-trigger="hover" data-content="{% if object.opgave_noter %}      {{ object.opgave_noter }}      {% else %}Ingen noter        {% endif %}" >{% if object.opgave_noter %}      {{ object.opgave_noter|truncatechars:"20"}}      {% else %}Ingen noter        {% endif %}</button>
+    <div class="col-2 border p-2 my-0  btn btn-outline-dark" href="#" data-toggle="popover" data-trigger="hover" data-content="{{ object.opgave_beskrivelse }}" >{% if object.opgave_beskrivelse %}{{ object.opgave_beskrivelse|truncatechars:"20"}}{% else %}Beskrivelse mangler{% endif %}</div>
+    <div class="col-2 border p-2 my-0  btn btn-outline-dark" href="#" data-toggle="popover" data-trigger="hover" data-content="{{ object.noter }}">              {% if object.noter %}             {{ object.noter|truncatechars:"20" }}            {% else %} Ingen noter       {% endif %}</div>
     <p class="col-1 border rounded p-2 my-0 text-center" >{{ object.tid_brugt }} t</p>
     <div class="col-1 border rounded p-0 my-0 text-center " >
         {%   if object.status == "2" %} <p class="  p-2 my-0 text-warning">Startet</p>
