--- a/src/PrimeroTaskMS/Templates/footer.html
+++ b/src/PrimeroTaskMS/Templates/footer.html
@@ -1,25 +1,9 @@
 <!-- Footer starter -->
 <footer>
-<div class= "navbar navbar-inverse navbar-static-bottom" role="navigation">
-    <div class="navbar-text pull-left">
-    </div>
-    <div class= "navbar-text pull-right">
-<!-- Add in your social media / github links here -->
-        <a href="https://github.com/clarkdatalabs">
-            <i class="fa fa-github-square fa-2x"></i></a>
-    </div>
+
+<div role="banner" style="background-color:#012a50 " class="fixed-bottom">
     <!--Copyright information-->
-    <div class="navbar-text pull-left">
-    &copy; Sebastian Ougter Olsen, 2019
-    </div>
+    <p class="text-white-50 p-2 mb-0" > &copy; Sebastian Ougter Olsen, 2019 <img width="20" height="12" src="http://zabanp.ir/wp-content/uploads/2019/03/denmark.jpg" ></p>
 </div>
-</footer>
-
-
-
-
-<div role="banner" class="col p-3 bottom" style=" background-color:#012a50">
-</div>
-
 
 </footer>
