--- a/src/PrimeroTaskMS/Templates/registration/login.html
+++ b/src/PrimeroTaskMS/Templates/registration/login.html
@@ -10,8 +10,7 @@
 
 
 <h2 class="col-4" >Login:</h2>
-<form method="post" class="col-4 " >
-  {% csrf_token %}
+<form method="post" class="col-4 " >{% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Login</button>
 </form>
