--- a/src/PrimeroTaskMS/opgaver/templates/opgaver/opgaver_detail.html
+++ b/src/PrimeroTaskMS/opgaver/templates/opgaver/opgaver_detail.html
@@ -11,13 +11,13 @@
 <div class="row">
 
     <p class="col-2 p-0 my-0 text-center font-weight-bold" >KUNDE</p>
-    <p class="col-1 p-0 my-0 text-center font-weight-bold" >ANSVARLIG</p>
+    <p class="col-2 p-0 my-0 text-center font-weight-bold" >ANSVARLIG</p>
     <p class="col-2 p-0 my-0 text-center font-weight-bold" >BESKRIVELSE</p>
     <p class="col-2 p-0 my-0 text-center font-weight-bold" >NOTER</p>
     <p class="col-1 p-0 my-0 text-center font-weight-bold" >BRUGT</p>
     <p class="col-1 p-0 my-0 text-center font-weight-bold" >STATUS</p>
     <p class="col-2 p-0 my-0 text-center font-weight-bold" >DEADLINE</p>
-    <p class="col-1 p-0 my-0 text-center font-weight-bold" >PRIORITET</p>
+    <!-- p class="col-1 p-0 my-0 text-center font-weight-bold" >PRIORITET</p -->        <!-- Listen er sorteret efter prioritet, behøver derfor ikke vise tallet -->
 
 </div>
 
@@ -26,43 +26,20 @@
     <div class="row py-0">
 
     <div class="col-2 border p-2 my-0  btn btn-outline-dark"  data-toggle="popover" data-trigger="hover" data-content=" Kontaktperson: John Doe Tlf: 12345678 Mail: abc@mail.com " >{{ instance.kunde_navn }}</div>
-    <div class="col-1 border rounded p-0 my-0 text-center " >
-
-       <!--  {{ object.ansvarlig }}  TESTER at den henter rigtigt-->
-
-        {%   if instance.ansvarlig == "5" %} <p class=" text-primary p-2 my-0 ">SO</p>
-        {% elif instance.ansvarlig == "2" %} <p class=" text-primary p-2 my-0 ">LM</p>
-        {% elif instance.ansvarlig == "4" %} <p class=" text-primary p-2 my-0 ">AB</p>
-        {% elif instance.ansvarlig == "3" %} <p class=" text-primary p-2 my-0 ">MB</p>
-        {% else %} <p class=" text-success p-2 my-0 " >Alle</p>
-        {% endif %}
-
-    </div>
-    <div class="col-2 border p-2 my-0  btn btn-outline-dark" href="#" data-toggle="popover" data-trigger="hover" data-content="{{ object.opgave_beskrivelse }}" >{% if instance.opgave_beskrivelse %}{{ instance.opgave_beskrivelse|truncatechars:"20"}}{% else %}Beskrivelse mangler{% endif %}</div>
-    <div class="col-2 border p-2 my-0  btn btn-outline-dark" href="#" data-toggle="popover" data-trigger="hover" data-content="{{ object.noter }}">              {% if instance.noter %}             {{ instance.noter|truncatechars:"20" }}            {% else %} Ingen noter       {% endif %}</div>
+    <p class="col-2 border rounded p-0 my-0 text-center " >{{ instance.ansvarlig }}</p>
+    <div class="col-2 border p-2 my-0  btn btn-outline-dark" href="#" data-toggle="popover" data-trigger="hover" data-content="{{ instance.opgave_beskrivelse }}" >{% if instance.opgave_beskrivelse %}{{ instance.opgave_beskrivelse|truncatechars:"20"}}{% else %}Beskrivelse mangler{% endif %}</div>
+    <div class="col-2 border p-2 my-0  btn btn-outline-dark" href="#" data-toggle="popover" data-trigger="hover" data-content="{{ instance.noter }}">              {% if instance.noter %}             {{ instance.noter|truncatechars:"20" }}            {% else %} Ingen noter       {% endif %}</div>
     <p class="col-1 border rounded p-2 my-0 text-center" >{{ object.tid_brugt }} t</p>
-    <div class="col-1 border rounded p-0 my-0 text-center " >
-        {%   if instance.status == "2" %} <p class="  p-2 my-0 text-warning">Startet</p>
-        {% elif instance.status == "3" %} <p class="  p-2 my-0 text-info"   >Halvvejs</p>
-        {% elif instance.status == "4" %} <p class="  p-2 my-0 text-info"   >Detaljer</p>
-        {% elif instance.status == "5" %} <p class="  p-2 my-0 text-success">Færdig</p>
-        {% else %} <p class=" p-2 my-0 text-danger" >Mangler</p>
-        {% endif %}
-    </div>
+    <p class="col-1 border rounded p-0 my-0 text-center " >{{ instance.status }}</p>
     <p class="col-2 border rounded p-2 my-0 text-center font-weight-bold" >{{ instance.deadline }}</p>
-    <div class="col-1 border rounded p-0 my-0 text-center " >
-        {%   if instance.prioritet == "1" %} <p class=" text-danger  p-2 my-0 ">Høj</p>
-        {% elif instance.prioritet == "2" %} <p class=" text-warning p-2 my-0 ">Mellem</p>
-        {% elif instance.prioritet == "3" %} <p class=" text-success p-2 my-0 ">Lav</p>
-        {% else %} <p>Ikke prioriteret</p>
-        {% endif %}
-    </div>
+    <!-- p class="col-1 border rounded p-0 my-0 text-center " >{{ instance.prioritet }}</p -->
 
 </div>
 
 {% endfor %}
 
-
+<h7 class="float-right mt-2" >*Sorteret efter prioritet</h7>
 </div> <!-- Min container slutter -->
+
 
 {% endblock %}
