--- a/src/PrimeroTaskMS/opgaver/templates/kunder/kunder_opret.html
+++ b/src/PrimeroTaskMS/opgaver/templates/kunder/kunder_opret.html
@@ -9,7 +9,7 @@
   <form class="col-4" method='POST' >
     {% csrf_token %}
     {{ form.as_p }}
-    <input type='submit' value='Save'/>
+    <input type='submit' value='Gem'/>
   </form>
 
 </div>
