--- a/src/PrimeroTaskMS/opgaver/templates/opgaver/opgaver_inaktive.html
+++ b/src/PrimeroTaskMS/opgaver/templates/opgaver/opgaver_inaktive.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 <div class="row justify-content-center rounded bg-white border " style="font-size:1.5vw">
-    <a class="nav-link" style="color:#012a50" href="/opgaver_opret">Opret ny opgave <img
-            src="https://image.flaticon.com/icons/svg/1370/1370639.svg" width="20" height="20"></a>
+    <a class="nav-link" style="color:#012a50">Afsluttede opgaver</a>
 </div>
 
 <div class="container  p-md-5 rounded bg-white border mt-5"> <!-- Min container starter -->
@@ -33,7 +33,8 @@
         <div class="col-2 border p-2 my-0  btn btn-outline-dark" href="#" data-toggle="popover" data-trigger="hover"
              data-content="{{ instance.opgave_beskrivelse }}">{% if instance.opgave_beskrivelse %}{{instance.opgave_beskrivelse|truncatechars:"20"}}{% else %}Beskrivelse mangler{% endif %}
         </div>
-        <div class="col-2 border p-2 my-0  btn btn-outline-dark" href="#" data-toggle="popover" data-trigger="hover" data-content="{{ instance.noter }}"> {% if instance.noter %} {{ instance.noter|truncatechars:"20" }} {% else %} Ingen noter {% endif %}
+        <div class="col-2 border p-2 my-0  btn btn-outline-dark" href="#" data-toggle="popover" data-trigger="hover"
+             data-content="{{ instance.noter }}"> {% if instance.noter %} {{ instance.noter|truncatechars:"20" }} {% else %} Ingen noter {% endif %}
         </div>
         <p class="col-1 border rounded p-2 my-0 text-center">{{ object.tid_brugt }} t</p>
         <p class="col-1 border rounded p-0 my-0 text-center ">{{ instance.status }}</p>
@@ -42,10 +43,11 @@
 
     </div>
 
-    <div>
+     <div>
         <a style="color:#012a50" href="{% url 'opgaver_rediger' instance.id %}">Rediger </a> <!-- Rediger -->
         <a style="color:#012a50" href="{% url 'opgaver_slet' instance.id %}">Slet </a> <!-- Slet -->
-    </div>
+        <!--a style="color:#012a50" href="{% url 'opgaver_rediger' instance.ansvarlig %}">Kunde </a> < Rediger -->
+     </div>
 
     {% endfor %}
 
@@ -53,10 +55,8 @@
 
 </div> <!-- Min container slutter -->
 
-<div class="container mx-auto col-2 p-md-2 mt-5 b-4 row justify-content-center rounded bg-white border "
-     style="font-size:1.5vw">
-    <a style="color:#012a50" href="/opgaver_inaktive"> Afsluttede Opgaver <img
-            src="https://image.flaticon.com/icons/svg/1370/1370650.svg" width="20" height="20"></a>
+<div class="container mx-auto col-2 p-md-2 mt-5 b-4 row justify-content-center rounded bg-white border " style="font-size:1.5vw">
+    <a style="color:#012a50" href="/opgaver"> Igangværende Opgaver <img src="https://image.flaticon.com/icons/svg/1370/1370650.svg" width="20" height="20"></a>
 </div>
 
 {% endblock %}
