--- a/src/PrimeroTaskMS/opgaver/templates/opgaver/opgaver_slet.html
+++ b/src/PrimeroTaskMS/opgaver/templates/opgaver/opgaver_slet.html
@@ -1,11 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="row justify-content-center p-2 rounded bg-white border mt-5 " style="font-size:1.5vw">
+
+<div class="container   mx-auto  bg-white  border rounded  m-2" style="width:440px;"> <!-- Min container starter -->
+
+<div class="row p-4 mx-auto">
+
+<form class="col-4" method="POST" action="">
     <form class="col-4" action='.' method="'POST"> {% csrf_token %}
-        <h1 >Skal ( {{ object.kunde_navn }} ) slettes?</h1>
-        <p justify-content-center><input type='submit' value='JA'/> <a><button>NEJ</button></a></p>
+        <p>Skal ( {{ object.kunde_navn }} ) slettes?</p>
+        <p><input type='submit' value='JA'/> <a><button>NEJ</button></a></p>
     </form>
+</form>
+
 </div>
 
+</div> <!-- Min container slutter -->
+
+
 {% endblock %}
+
+
