--- a/src/PrimeroTaskMS/opgaver/templates/opgaver/opgaver_inaktive.html
+++ b/src/PrimeroTaskMS/opgaver/templates/opgaver/opgaver_inaktive.html
@@ -36,7 +36,7 @@
         <div class="col-2 border p-2 my-0  btn btn-outline-dark" href="#" data-toggle="popover" data-trigger="hover"
              data-content="{{ instance.noter }}"> {% if instance.noter %} {{ instance.noter|truncatechars:"20" }} {% else %} Ingen noter {% endif %}
         </div>
-        <p class="col-1 border rounded p-2 my-0 text-center">{{ object.tid_brugt }} t</p>
+        <p class="col-1 border rounded p-2 my-0 text-center">{{ instance.tid_brugt }} t</p>
         <p class="col-1 border rounded p-0 my-0 text-center ">{{ instance.status }}</p>
         <p class="col-2 border rounded p-2 my-0 text-center font-weight-bold">{{ instance.deadline }}</p>
         <!-- p class="col-1 border rounded p-0 my-0 text-center " >{{ instance.prioritet }}</p -->
